--- a/make_dataset_dir.ipynb
+++ b/make_dataset_dir.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,96 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>file_name</th>\n",
-       "      <th>class</th>\n",
-       "      <th>state</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>10000.png</td>\n",
-       "      <td>transistor</td>\n",
-       "      <td>good</td>\n",
-       "      <td>transistor-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10001.png</td>\n",
-       "      <td>capsule</td>\n",
-       "      <td>good</td>\n",
-       "      <td>capsule-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>10002.png</td>\n",
-       "      <td>transistor</td>\n",
-       "      <td>good</td>\n",
-       "      <td>transistor-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>10003.png</td>\n",
-       "      <td>wood</td>\n",
-       "      <td>good</td>\n",
-       "      <td>wood-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>10004.png</td>\n",
-       "      <td>bottle</td>\n",
-       "      <td>good</td>\n",
-       "      <td>bottle-good</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   index  file_name       class state            label\n",
-       "0      0  10000.png  transistor  good  transistor-good\n",
-       "1      1  10001.png     capsule  good     capsule-good\n",
-       "2      2  10002.png  transistor  good  transistor-good\n",
-       "3      3  10003.png        wood  good        wood-good\n",
-       "4      4  10004.png      bottle  good      bottle-good"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_df = pd.read_csv('./dataset/train_df.csv')\n",
     "train_df.head()"
@@ -110,120 +23,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>file_name</th>\n",
-       "      <th>class</th>\n",
-       "      <th>state</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>4272</th>\n",
-       "      <td>4272</td>\n",
-       "      <td>14272.png</td>\n",
-       "      <td>transistor</td>\n",
-       "      <td>good</td>\n",
-       "      <td>transistor-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4273</th>\n",
-       "      <td>4273</td>\n",
-       "      <td>14273.png</td>\n",
-       "      <td>transistor</td>\n",
-       "      <td>good</td>\n",
-       "      <td>transistor-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4274</th>\n",
-       "      <td>4274</td>\n",
-       "      <td>14274.png</td>\n",
-       "      <td>grid</td>\n",
-       "      <td>good</td>\n",
-       "      <td>grid-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4275</th>\n",
-       "      <td>4275</td>\n",
-       "      <td>14275.png</td>\n",
-       "      <td>zipper</td>\n",
-       "      <td>good</td>\n",
-       "      <td>zipper-good</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4276</th>\n",
-       "      <td>4276</td>\n",
-       "      <td>14276.png</td>\n",
-       "      <td>screw</td>\n",
-       "      <td>good</td>\n",
-       "      <td>screw-good</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      index  file_name       class state            label\n",
-       "4272   4272  14272.png  transistor  good  transistor-good\n",
-       "4273   4273  14273.png  transistor  good  transistor-good\n",
-       "4274   4274  14274.png        grid  good        grid-good\n",
-       "4275   4275  14275.png      zipper  good      zipper-good\n",
-       "4276   4276  14276.png       screw  good       screw-good"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_df.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for label in train_df[\"label\"]:\n",
-    "    if not os.path.exists(\"./dataset/main_directory/\"+label):\n",
-    "        os.mkdir(\"./dataset/main_directory/\"+label)"
+    "import tensorflow as tf\n",
+    "from tensorflow import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for file, label in zip(train_df[\"file_name\"],train_df[\"label\"]):\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_pre = train_df[\"file_name\"].to_numpy()\n",
+    "target = train_df[\"label\"].to_numpy()\n",
+    "train_x, valid_x, train_y, valid_y = train_test_split(\n",
+    "    data_pre, target, test_size=0.2, stratify=target\n",
+    ")\n",
+    "print(train_x.shape,valid_x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_path = \"./dataset/main_directory/train/\"\n",
+    "valid_path = \"./dataset/main_directory/valid/\"\n",
+    "\n",
+    "if not os.path.exists(train_path):\n",
+    "        os.mkdir(train_path)\n",
+    "if not os.path.exists(valid_path):\n",
+    "        os.mkdir(valid_path)\n",
+    "\n",
+    "for label in train_df[\"label\"].unique():\n",
+    "    if not os.path.exists(train_path+label):\n",
+    "        os.mkdir(train_path+label)\n",
+    "    if not os.path.exists(valid_path+label):\n",
+    "        os.mkdir(valid_path+label)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file, label in zip(train_x,train_y):\n",
     "    src = \"./dataset/train/\"+file\n",
-    "    dst = \"./dataset/main_directory/\"+label+'/'+label+'_train_'+file\n",
+    "    dst = train_path + label + '/' + label + '_train_' + file\n",
     "    shutil.copy(src, dst)"
    ]
   },
@@ -233,7 +102,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow import keras"
+    "for file, label in zip(valid_x,valid_y):\n",
+    "    src = \"./dataset/train/\"+file\n",
+    "    dst = valid_path + label + '/' + label + '_train_' + file\n",
+    "    shutil.copy(src, dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT_SHAPE = (300,300,3)"
    ]
   },
   {
@@ -248,10 +129,15 @@
     "    width_shift_range=0.1,\n",
     "    height_shift_range=0.1,\n",
     "    rotation_range=5,\n",
-    "    shear_range=0.7,\n",
-    "    zoom_range=[0.9, 2.2],\n",
     "    vertical_flip=True,\n",
     "    fill_mode='nearest'\n",
+    ")\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    directory= train_path,\n",
+    "    target_size= INPUT_SHAPE[:2],\n",
+    "    save_to_dir='./gen_train/',\n",
+    "    batch_size=4,\n",
+    "    class_mode = \"categorical\"\n",
     ")"
    ]
   },
@@ -261,22 +147,210 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_generator = train_datagen.flow_from_directory(\n",
-    "    directory='./dataset/main_directory/',\n",
-    "    target_size=(150,150),\n",
-    "    save_to_dir='./gen_train/',\n",
-    "    batch_size=5,\n",
-    "    class_mode = 'categorical'\n",
+    "valid_datagen = keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    horizontal_flip=True,\n",
+    "    width_shift_range=0.1,\n",
+    "    height_shift_range=0.1,\n",
+    "    rotation_range=5,\n",
+    "    vertical_flip=True,\n",
+    "    fill_mode='nearest'\n",
+    ")\n",
+    "valid_generator = valid_datagen.flow_from_directory(\n",
+    "    directory= valid_path,\n",
+    "    target_size= INPUT_SHAPE[:2],\n",
+    "    save_to_dir='./gen_valid/',\n",
+    "    batch_size=4,\n",
+    "    class_mode = \"categorical\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_datagen = keras.preprocessing.image.ImageDataGenerator(rescale=1./255)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_generator = test_datagen.flow_from_directory(\n",
+    "    directory='./dataset/test',\n",
+    "    save_to_dir='./gen_test/',\n",
+    "    target_size= INPUT_SHAPE[:2],\n",
+    "    class_mode= None,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transfer_model = keras.applications.Xception(weights='imagenet',\n",
+    "                                         include_top = False,\n",
+    "                                         input_shape = INPUT_SHAPE)\n",
+    "transfer_model.trainable = False\n",
+    "transfer_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finetune_model = keras.Sequential()\n",
+    "finetune_model.add(transfer_model)\n",
+    "finetune_model.add(keras.layers.Flatten())\n",
+    "finetune_model.add(keras.layers.Dense(200, activation='relu'))\n",
+    "finetune_model.add(keras.layers.Dense(88, activation='softmax'))\n",
+    "\n",
+    "finetune_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finetune_model.compile(loss='categorical_crossentropy',\n",
+    "                      optimizer=keras.optimizers.Adam(learning_rate=0.0002),\n",
+    "                       metrics='accuracy')                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "if not os.path.exists('./gen_train'):\n",
+    "    os.mkdir('./gen_train')\n",
+    "if not os.path.exists('./gen_valid'):\n",
+    "    os.mkdir('./gen_valid')\n",
+    "if not os.path.exists('./gen_test'):\n",
+    "    os.mkdir('./gen_test')\n",
+    "\n",
+    "tf.random.set_seed(0)\n",
+    "\n",
+    "STEP_SIZE_TRAIN=train_generator.n//train_generator.batch_size\n",
+    "STEP_SIZE_VALID=valid_generator.n//valid_generator.batch_size\n",
+    "\n",
+    "hist = finetune_model.fit_generator(generator=train_generator,\n",
+    "                    steps_per_epoch=STEP_SIZE_TRAIN,\n",
+    "                    validation_data=valid_generator,\n",
+    "                    validation_steps=STEP_SIZE_VALID,\n",
+    "                    epochs=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(test_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = finetune_model.predict(test_generator)\n",
+    "result.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label = os.listdir('./dataset/main_directory/train/')\n",
+    "len(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_labels = []\n",
+    "for i in range(result.shape[0]):\n",
+    "    j = result[i].argmax()\n",
+    "    print(f\"{i}번째 예측:\",j,label[j])\n",
+    "    target_labels.append(label[j])    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(target_labels)\n",
+    "df.columns = [\"label\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('submission.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(hist.history['loss'], c='r')\n",
+    "plt.plot(hist.history['val_loss'], c='b')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "83163a03c5eaefb64b3c23311a8400fdcd001654f3394e66246993e027d5ac46"
+   "hash": "d102a36440b3fa6f6e9070927b3490df4f74782c023ea09ceab8356b50f0a087"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -291,8 +365,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
