--- a/anomaly_detection/pratice.ipynb
+++ b/anomaly_detection/pratice.ipynb
@@ -8,7 +8,12 @@
    "source": [
     "import os\n",
     "import shutil\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -28,25 +33,6 @@
    "outputs": [],
    "source": [
     "train_df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow import keras"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -184,7 +170,9 @@
     "    directory='./dataset/test',\n",
     "    save_to_dir='./gen_test/',\n",
     "    target_size= INPUT_SHAPE[:2],\n",
+    "    batch_size=4,\n",
     "    class_mode= None,\n",
+    "    shuffle=False\n",
     ")"
    ]
   },
@@ -269,6 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "test_generator.resete()\n",
     "result = finetune_model.predict(test_generator)\n",
     "result.shape"
    ]
@@ -335,6 +324,15 @@
     "plt.plot(hist.history['val_loss'], c='b')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "finetune_model.save(\"my_model.h5\")"
    ]
   },
   {
