Transfer learning - Xception experimental

--- a/sign_lang_img_classifier/predict.ipynb
+++ b/sign_lang_img_classifier/predict.ipynb
@@ -10,6 +10,7 @@
     "from tensorflow import keras\n",
     "\n",
     "import os\n",
+    "from glob import glob\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +136,7 @@
        "tensorflow.python.data.ops.dataset_ops.PrefetchDataset"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
        "TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,46 +167,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./model\\\\001-2.0413.h5',\n",
+       " './model\\\\002-1.0501.h5',\n",
+       " './model\\\\003-0.7547.h5',\n",
+       " './model\\\\010-0.5476.h5',\n",
+       " './model\\\\011-0.5444.h5']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_list = glob('./model/*.h5')\n",
+    "model_list[-5:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " sequential (Sequential)     (None, 224, 224, 3)       0         \n",
+      " sequential_4 (Sequential)   (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
-      " rescaling (Rescaling)       (None, 224, 224, 3)       0         \n",
+      " rescaling_3 (Rescaling)     (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
       " xception (Functional)       (None, 7, 7, 2048)        20861480  \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 100352)            0         \n",
+      " flatten_3 (Flatten)         (None, 100352)            0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 2000)              200706000 \n",
+      " dense_6 (Dense)             (None, 2000)              200706000 \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 11)                22011     \n",
+      " dense_7 (Dense)             (None, 1000)              2001000   \n",
+      "                                                                 \n",
+      " dense_8 (Dense)             (None, 11)                11011     \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 221,589,491\n",
-      "Trainable params: 200,728,011\n",
+      "Total params: 223,579,491\n",
+      "Trainable params: 202,718,011\n",
       "Non-trainable params: 20,861,480\n",
       "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "model_list = os.listdir('./model/')\n",
-    "model = keras.models.load_model('./model/'+model_list[-1])\n",
+    "model = keras.models.load_model(model_list[-1])\n",
     "model.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +281,7 @@
        "215"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,11 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"submission.csv\",'w',encoding='utf8') as f:\n",
+    "with open(\"./result/num_hiddenlayer_2.csv\",'w',encoding='utf8') as f:\n",
     "    f.write('file_name,label\\n')\n",
     "    for i in range(num_test):\n",
     "        f.write('{},{}\\n'.format(filenames[i],test_classes[i]))"
