dropout layer add 2 layer, test_acc : 85.04%

--- a/sign_lang_img_classifier/predict.ipynb
+++ b/sign_lang_img_classifier/predict.ipynb
@@ -173,11 +173,11 @@
     {
      "data": {
       "text/plain": [
-       "['./model\\\\001-2.0413.h5',\n",
-       " './model\\\\002-1.0501.h5',\n",
-       " './model\\\\003-0.7547.h5',\n",
-       " './model\\\\010-0.5476.h5',\n",
-       " './model\\\\011-0.5444.h5']"
+       "['./model\\\\008-0.5556.h5',\n",
+       " './model\\\\012-0.5029.h5',\n",
+       " './model\\\\021-0.4691.h5',\n",
+       " './model\\\\034-0.4512.h5',\n",
+       " './model\\\\059-0.3974.h5']"
       ]
      },
      "execution_count": 10,
@@ -199,27 +199,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " sequential_4 (Sequential)   (None, 224, 224, 3)       0         \n",
+      " sequential (Sequential)     (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
-      " rescaling_3 (Rescaling)     (None, 224, 224, 3)       0         \n",
+      " rescaling_2 (Rescaling)     (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
       " xception (Functional)       (None, 7, 7, 2048)        20861480  \n",
       "                                                                 \n",
-      " flatten_3 (Flatten)         (None, 100352)            0         \n",
+      " flatten_2 (Flatten)         (None, 100352)            0         \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 2000)              200706000 \n",
+      " dropout_2 (Dropout)         (None, 100352)            0         \n",
       "                                                                 \n",
-      " dense_7 (Dense)             (None, 1000)              2001000   \n",
+      " dense_4 (Dense)             (None, 2000)              200706000 \n",
       "                                                                 \n",
-      " dense_8 (Dense)             (None, 11)                11011     \n",
+      " dropout_3 (Dropout)         (None, 2000)              0         \n",
+      "                                                                 \n",
+      " dense_5 (Dense)             (None, 11)                22011     \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 223,579,491\n",
-      "Trainable params: 202,718,011\n",
+      "Total params: 221,589,491\n",
+      "Trainable params: 200,728,011\n",
       "Non-trainable params: 20,861,480\n",
       "_________________________________________________________________\n"
      ]
@@ -296,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./result/num_hiddenlayer_2.csv\",'w',encoding='utf8') as f:\n",
+    "with open(\"./result/dropout2.csv\",'w',encoding='utf8') as f:\n",
     "    f.write('file_name,label\\n')\n",
     "    for i in range(num_test):\n",
     "        f.write('{},{}\\n'.format(filenames[i],test_classes[i]))"
