4hiddenlayer test-acc : 83.17%

--- a/sign_lang_img_classifier/predict.ipynb
+++ b/sign_lang_img_classifier/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "tensorflow.python.data.ops.dataset_ops.PrefetchDataset"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,20 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./model\\\\008-0.5556.h5',\n",
-       " './model\\\\012-0.5029.h5',\n",
-       " './model\\\\021-0.4691.h5',\n",
-       " './model\\\\034-0.4512.h5',\n",
-       " './model\\\\059-0.3974.h5']"
+       "['./model\\\\031-0.4879.h5',\n",
+       " './model\\\\032-0.4545.h5',\n",
+       " './model\\\\039-0.4389.h5',\n",
+       " './model\\\\045-0.4106.h5',\n",
+       " './model\\\\111-0.4025.h5']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,36 +192,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
       " sequential (Sequential)     (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
-      " rescaling_2 (Rescaling)     (None, 224, 224, 3)       0         \n",
+      " rescaling (Rescaling)       (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
       " xception (Functional)       (None, 7, 7, 2048)        20861480  \n",
       "                                                                 \n",
-      " flatten_2 (Flatten)         (None, 100352)            0         \n",
+      " flatten (Flatten)           (None, 100352)            0         \n",
       "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 100352)            0         \n",
+      " dropout (Dropout)           (None, 100352)            0         \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 2000)              200706000 \n",
+      " dense (Dense)               (None, 2000)              200706000 \n",
       "                                                                 \n",
-      " dropout_3 (Dropout)         (None, 2000)              0         \n",
+      " dropout_1 (Dropout)         (None, 2000)              0         \n",
       "                                                                 \n",
-      " dense_5 (Dense)             (None, 11)                22011     \n",
+      " dense_1 (Dense)             (None, 1000)              2001000   \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 1000)              0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 500)               500500    \n",
+      "                                                                 \n",
+      " dropout_3 (Dropout)         (None, 500)               0         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 100)               50100     \n",
+      "                                                                 \n",
+      " dropout_4 (Dropout)         (None, 100)               0         \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 11)                1111      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 221,589,491\n",
-      "Trainable params: 200,728,011\n",
+      "Total params: 224,120,191\n",
+      "Trainable params: 203,258,711\n",
       "Non-trainable params: 20,861,480\n",
       "_________________________________________________________________\n"
      ]
@@ -234,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +295,7 @@
        "215"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,11 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./result/dropout2.csv\",'w',encoding='utf8') as f:\n",
+    "with open(\"./result/4hiddenlayer.csv\",'w',encoding='utf8') as f:\n",
     "    f.write('file_name,label\\n')\n",
     "    for i in range(num_test):\n",
     "        f.write('{},{}\\n'.format(filenames[i],test_classes[i]))"
