3hiddenlayer test-acc : 84.11%

--- a/sign_lang_img_classifier/predict.ipynb
+++ b/sign_lang_img_classifier/predict.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "tensorflow.python.data.ops.dataset_ops.PrefetchDataset"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "TensorSpec(shape=(None, 224, 224, 3), dtype=tf.float32, name=None)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,20 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['./model\\\\031-0.4879.h5',\n",
-       " './model\\\\032-0.4545.h5',\n",
-       " './model\\\\039-0.4389.h5',\n",
-       " './model\\\\045-0.4106.h5',\n",
-       " './model\\\\111-0.4025.h5']"
+       "['./model\\\\026-0.5255.h5',\n",
+       " './model\\\\027-0.4543.h5',\n",
+       " './model\\\\041-0.4466.h5',\n",
+       " './model\\\\042-0.4323.h5',\n",
+       " './model\\\\045-0.3432.h5']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,48 +192,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " sequential (Sequential)     (None, 224, 224, 3)       0         \n",
+      " sequential_2 (Sequential)   (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
-      " rescaling (Rescaling)       (None, 224, 224, 3)       0         \n",
+      " rescaling_1 (Rescaling)     (None, 224, 224, 3)       0         \n",
       "                                                                 \n",
       " xception (Functional)       (None, 7, 7, 2048)        20861480  \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 100352)            0         \n",
+      " flatten_1 (Flatten)         (None, 100352)            0         \n",
       "                                                                 \n",
-      " dropout (Dropout)           (None, 100352)            0         \n",
+      " dropout_5 (Dropout)         (None, 100352)            0         \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 2000)              200706000 \n",
+      " dense_5 (Dense)             (None, 2000)              200706000 \n",
       "                                                                 \n",
-      " dropout_1 (Dropout)         (None, 2000)              0         \n",
+      " dropout_6 (Dropout)         (None, 2000)              0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 1000)              2001000   \n",
+      " dense_6 (Dense)             (None, 1000)              2001000   \n",
       "                                                                 \n",
-      " dropout_2 (Dropout)         (None, 1000)              0         \n",
+      " dropout_7 (Dropout)         (None, 1000)              0         \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 500)               500500    \n",
+      " dense_7 (Dense)             (None, 100)               100100    \n",
       "                                                                 \n",
-      " dropout_3 (Dropout)         (None, 500)               0         \n",
+      " dropout_8 (Dropout)         (None, 100)               0         \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 100)               50100     \n",
-      "                                                                 \n",
-      " dropout_4 (Dropout)         (None, 100)               0         \n",
-      "                                                                 \n",
-      " dense_4 (Dense)             (None, 11)                1111      \n",
+      " dense_8 (Dense)             (None, 11)                1111      \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 224,120,191\n",
-      "Trainable params: 203,258,711\n",
+      "Total params: 223,669,691\n",
+      "Trainable params: 202,808,211\n",
       "Non-trainable params: 20,861,480\n",
       "_________________________________________________________________\n"
      ]
@@ -246,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +291,7 @@
        "215"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,11 +302,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./result/4hiddenlayer.csv\",'w',encoding='utf8') as f:\n",
+    "with open(\"./result/3hiddenlayer.csv\",'w',encoding='utf8') as f:\n",
     "    f.write('file_name,label\\n')\n",
     "    for i in range(num_test):\n",
     "        f.write('{},{}\\n'.format(filenames[i],test_classes[i]))"
