keras.generator VS tf.data 비교 준비

--- a/anomaly_detection/tensorflow_input_pipline.ipynb
+++ b/anomaly_detection/tensorflow_input_pipline.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_SHAPE = (224,224,3)\n",
+    "INPUT_SHAPE = (700,700,3)\n",
     "BATCH_SIZE = 32\n",
     "AUTOTUNE = tf.data.experimental.AUTOTUNE"
    ]
@@ -315,7 +315,7 @@
    "source": [
     "data_augmentation = keras.Sequential([\n",
     "    keras.layers.experimental.preprocessing.RandomFlip(\"horizontal_and_vertical\"),\n",
-    "    keras.layers.experimental.preprocessing.RandomRotation(0.2),\n",
+    "    keras.layers.experimental.preprocessing.RandomRotation(5),\n",
     "    keras.layers.experimental.preprocessing.RandomTranslation(0.1,0.1),\n",
     "])"
    ]
@@ -381,13 +381,13 @@
     }
    ],
    "source": [
-    "transfer_model = keras.applications.VGG16(\n",
+    "transfer_model = keras.applications.Xception(\n",
     "    input_shape= INPUT_SHAPE,\n",
     "    include_top= False,\n",
     "    weights= 'imagenet',\n",
     ")\n",
     "transfer_model.trainable = False\n",
-    "transfer_model.summary()"
+    "# transfer_model.summary()"
    ]
   },
   {
@@ -429,10 +429,11 @@
     "    keras.Input(shape=INPUT_SHAPE),\n",
     "    data_augmentation,\n",
     "    keras.layers.experimental.preprocessing.Rescaling(1./255),\n",
-    "    transfer_model,\n",
-    "    keras.layers.Flatten(),\n",
-    "    keras.layers.Dense(num_classes, activation='softmax')\n",
-    "],\"VGG16\")\n",
+    "])\n",
+    "finetune_model.add(transfer_model)\n",
+    "finetune_model.add(keras.layers.Flatten())\n",
+    "finetune_model.add(keras.layers.Dense(200, activation='relu'))\n",
+    "finetune_model.add(keras.layers.Dense(88, activation='softmax'))\n",
     "finetune_model.summary()\n",
     "\n",
     "finetune_model.compile(loss='sparse_categorical_crossentropy',\n",
