--- a/make_image_directory.ipynb
+++ b/make_image_directory.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import shutil"
+    "import shutil\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -27,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = train_df[\"file_name\"].to_numpy()\n",
-    "target = train_df[\"label\"].to_numpy()"
+    "train = train_df[\"file_name\"]\n",
+    "target = train_df[\"label\"]"
    ]
   },
   {
@@ -37,15 +38,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_path = \"./dataset/main_directory/\"\n",
-    "test_path = \"./dataset/test/\"\n",
+    "train_path = Path(\"./dataset/main_directory/\")\n",
+    "train_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "if not os.path.exists(train_path):\n",
-    "        os.mkdir(train_path)\n",
+    "test_path = Path(\"./dataset/test/\")\n",
+    "test_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "for label in train_df[\"label\"].unique():\n",
-    "    if not os.path.exists(train_path+label):\n",
-    "        os.mkdir(train_path+label)"
+    "for label in target.unique():\n",
+    "    label_path = Path(os.path.join(train_path,label))\n",
+    "    label_path.mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
@@ -72,7 +73,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
   "orig_nbformat": 4
